Nerfed the shotgun upgraded path, added new enemy type and some sfx